@@ -1,10 +1,10 @@
 cerebro-1-0-0-pre3
 
 cerebro-1-0-0-pre4
-- modules for boottime
-- ability to monitor new metrics
-- server for updating metrics
-- api for updating metrics
+- library/server to monitor new metrics
+  - uncache metrics
+- tcp and udp updates
+- tcp for special service monitoring
 
 cerebro-1-0-0-pre5
 - command line tools
